# PsychologyService

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
api/: __init__.py
api/auth/: crud.py  schemas.py  utils.py  views.py
api/invites/: crud.py  schemas.py  utils.py  views.py
api/posts/: crud.py  schemas.py  utils.py  views.py
app/: dependencies.py  main.py  pytest.ini
app/config/: __init__.py
app/config/database/: DatabaseConnection.py
app/config/settings/: settings.py
app/dto/: invites.py  jwt_token.py  posts.py  users.py
app/migrations/: env.py
app/migrations/versions/: 191cf599395d_update_usr_model.py  1b96fb8a0355_update_user_table_add_role_and_email_.py  1ce5e0cb43cf_correct_invite_relationship.py  2718d3de4ee1_rename_fields_for_user_table.py  (+9 more)
app/models/: __init__.py  base.py  invite.py  post.py  user.py
app/presentation/: AuthRouter.py  InviteRouter.py  PostRouter.py  UserRouter.py  __init__.py
app/repositories/: __init__.py
app/services/: __init__.py
core/: db_connection.py  settings.py
core/models/: __init__.py  confirmation_code.py  disposable_invite.py  invite.py  post.py  reusable_invite.py  user.py
migrations/: env.py
migrations/versions/: 253a945bad57_correct_relationship_between_user_and_.py  3b1e6031ee4a_add_witing_field_to_user_model.py  56daa272722d_correct_relationship_in_tables.py  9cadb8376a09_create_invites_tables.py  f31484e38c7b_add_interests_to_users_table.py  f6107e98a6c4_initial_version.py  f98d3f5727a7_create_unvite_table.py  fc8bb0ae365a_simplify_invite_model.py
(+26 files in other folders)
